force-app/main/default/objects/Case/fields/SFCC_Order_No__c.field-meta.xml
<CustomField>
    <fullName>SFCC_Order_No__c</fullName>
    <description>This field holds Salesforce Commerce Cloud Order Number (for OMS)  populated by the customer from the Contact Us form on the ToysRus website. This is optional field</description>
    <inlineHelpText>This field holds OMS Order Number populated by the customer from the Contact Us form on the ToysRus website. Use this to search for and link to the OMS order in Salesforce</inlineHelpText>
    <label>Web OMS Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>