force-app/main/default/objects/Case/fields/SFCCProduct__c.field-meta.xml
<CustomField>
    <fullName>SFCCProduct__c</fullName>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>