force-app/main/default/objects/Case/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The store in which this case should be routed to.</description>
    <inlineHelpText>The store in which this case should be routed to.</inlineHelpText>
    <label>Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>