force-app/main/default/objects/Case/fields/Store_Director_Email__c.field-meta.xml
<CustomField>
    <fullName>Store_Director_Email__c</fullName>
    <label>Store Director Email</label>
    <type>Email</type>
</CustomField>