force-app/main/default/objects/Case/fields/Store_Feedback_Negative_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Store_Feedback_Negative_Timestamp__c</fullName>
    <label>Store Feedback (Negative) Timestamp</label>
    <type>DateTime</type>
</CustomField>