force-app/main/default/objects/Case/fields/Store_Feedback_Type__c.field-meta.xml
<CustomField>
    <fullName>Store_Feedback_Type__c</fullName>
    <label>Store Feedback Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>