force-app/main/default/objects/Case/fields/Store_ID__c.field-meta.xml
<CustomField>
    <fullName>Store_ID__c</fullName>
    <label>Store ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>