force-app/main/default/objects/Case/fields/StoreNumberForOncontactEmail__c.field-meta.xml
<CustomField>
    <fullName>StoreNumberForOncontactEmail__c</fullName>
    <formula>Store__r.Keytree_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StoreNumberForOncontactEmail</label>
    <type>Text</type>
</CustomField>