force-app/main/default/objects/Case/fields/Transcom_Operations__c.field-meta.xml
<CustomField>
    <fullName>Transcom_Operations__c</fullName>
    <label>Transcom Operations</label>
    <type>Email</type>
</CustomField>