force-app/main/default/objects/Case/fields/Web_Language__c.field-meta.xml
<CustomField>
    <fullName>Web_Language__c</fullName>
    <label>Web Language</label>
    <length>100</length>
    <type>Text</type>
</CustomField>