force-app/main/default/objects/Case/recordTypes/In_Store_Case.recordType-meta.xml
<RecordType>
    <fullName>In_Store_Case</fullName>
    <active>true</active>
    <businessProcess>TRU Standard Process</businessProcess>
    <description>Cases that are handled in-store by employees using KIT.</description>
    <label>In Store Case</label>
</RecordType>