force-app/main/default/objects/Case/recordTypes/Price_Match.recordType-meta.xml
<RecordType>
    <fullName>Price_Match</fullName>
    <active>true</active>
    <businessProcess>TRU Standard Process</businessProcess>
    <description>Query Price Adjustments items</description>
    <label>Price Adjustment</label>
</RecordType>