force-app/main/default/objects/Case/validationRules/Address_Correction_Fields_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_Correction_Fields_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ispickval( Disposition_1__c ,&quot;Address Correction&quot;)
&amp;&amp;
isblank( Address_for_Address_Correction__c )</errorConditionFormula>
    <errorMessage>Please fill in the &apos;Address for Address Correction&apos; field.</errorMessage>
</ValidationRule>