force-app/main/default/objects/Case/validationRules/Cannot_Close_Unresolved_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Close_Unresolved_Case</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    (NOT (ISPICKVAL( KIT_Status__c , &apos;Resolved&apos;))),
    ISPICKVAL( Status , &apos;Closed&apos;) ,
    contains(RecordType.Name ,&apos;Store&apos;),
    ISPICKVAL( Reason , &apos;In Store&apos;) 
)</errorConditionFormula>
    <errorMessage>A KIT/in-store case cannot be closed without a &quot;Resolved&quot; KIT status.</errorMessage>
</ValidationRule>