force-app/main/default/objects/Case/validationRules/Mandatory_Fields_Before_Changing_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Fields_Before_Changing_Owner</fullName>
    <active>false</active>
    <errorConditionFormula>AND(    NOT(ISNEW()),
	OR(
		IsBlank(Subject),
		IsBlank(Text(Type))
	),
	NOT(BEGINS(PRIORVALUE(OwnerId), &quot;00G&quot;))
)</errorConditionFormula>
    <errorMessage>Please enter required fields (Subject, Type)</errorMessage>
</ValidationRule>