force-app/main/default/objects/Case/validationRules/OrderFldRequiredForLevel2PkgDel.validationRule-meta.xml
<ValidationRule>
    <fullName>OrderFldRequiredForLevel2PkgDel</fullName>
    <active>true</active>
    <description>If Issue - package/delivery is selected in Level 2 Order number is required.</description>
    <errorConditionFormula>ISPICKVAL(Disposition_2__c, &apos;Issue - package/delivery&apos;) &amp;&amp; ISBLANK(Order__c)</errorConditionFormula>
    <errorDisplayField>Order__c</errorDisplayField>
    <errorMessage>Please fill Order field.</errorMessage>
</ValidationRule>