force-app/main/default/objects/Case/validationRules/SetPendingStatusForMonitorQueueOwnership.validationRule-meta.xml
<ValidationRule>
    <fullName>SetPendingStatusForMonitorQueueOwnership</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(Owner:Queue.DeveloperName = &apos;All_Levels_Monitor_Queue&apos;, Owner:Queue.DeveloperName = &apos;Tier_2_Monitor_Queue&apos;), NOT(ISPICKVAL(Status, &apos;Pending&apos;)))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Please change case status to &quot;Pending&quot;.</errorMessage>
</ValidationRule>