force-app/main/default/objects/Case/validationRules/Type_should_be_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_should_be_mandatory</fullName>
    <active>true</active>
    <description>Type field is a mandatory field</description>
    <errorConditionFormula>AND(NOT(ISNEW()),
				ISBLANK(TEXT(  Type  )))</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>This field is mandatory</errorMessage>
</ValidationRule>