force-app/main/default/objects/Case/validationRules/Unable_to_Login_to_Registry_required_fld.validationRule-meta.xml
<ValidationRule>
    <fullName>Unable_to_Login_to_Registry_required_fld</fullName>
    <active>false</active>
    <errorConditionFormula>ispickval(Disposition_1__c ,&quot;Unable to log in to registry&quot;)
&amp;&amp;
isblank( Registry_Number__c )</errorConditionFormula>
    <errorMessage>Please include the Registry Number when using this disposition.</errorMessage>
</ValidationRule>