force-app/main/default/objects/Case/listViews/All_Levels_Monitor_Queue_Case.listView-meta.xml
<ListView>
    <fullName>All_Levels_Monitor_Queue_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Queue_Sub_type__c</columns>
    <columns>Channel__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>Store__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>Web_Language__c</columns>
    <columns>Assignment_Timestamp_Monitor_Queue__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>All–Monitor/Tous - Surveillance</label>
    <queue>All_Levels_Monitor_Queue</queue>
    <sharedTo>
        <role>ECR</role>
        <role>ECR_Manager</role>
        <role>Lead</role>
        <role>Tier_1</role>
        <role>Tier_2</role>
    </sharedTo>
</ListView>