force-app/main/default/objects/Case/listViews/Bin_Check.listView-meta.xml
<ListView>
    <fullName>Bin_Check</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Store_ID__c</columns>
    <columns>Queue_Sub_type__c</columns>
    <columns>Channel__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Queue_Sub_type__c</field>
        <operation>equals</operation>
        <value>Bin Check</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Bin Check/Vérification de bac​</label>
    <sharedTo>
        <role>Warehouse</role>
    </sharedTo>
</ListView>