force-app/main/default/objects/Case/listViews/ChatSupport_Case.listView-meta.xml
<ListView>
    <fullName>ChatSupport_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Store_ID__c</columns>
    <columns>Queue_Sub_type__c</columns>
    <columns>Channel__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Queue</filterScope>
    <label>ChatSupport/SupportClavardage​</label>
    <queue>ChatSupport</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>