force-app/main/default/objects/Case/listViews/Christine_s_bucket.listView-meta.xml
<ListView>
    <fullName>Christine_s_bucket</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Disposition_1__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>Christine Lamonde</value>
    </filters>
    <label>Christine&apos;s bucket</label>
    <sharedTo>
        <role>ECR</role>
        <role>Lead</role>
        <role>Tier_2</role>
    </sharedTo>
</ListView>