force-app/main/default/objects/Case/listViews/Closed_Cases.listView-meta.xml
<ListView>
    <fullName>Closed_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.REASON</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Store_ID__c</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Closed Cases / Requêtes Fermées</label>
    <sharedTo>
        <role>ECR</role>
        <role>ECR_Manager</role>
        <role>Lead</role>
        <role>Tier_1</role>
        <role>Tier_2</role>
    </sharedTo>
</ListView>