force-app/main/default/objects/Case/listViews/Email_French_Case.listView-meta.xml
<ListView>
    <fullName>Email_French_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Store_ID__c</columns>
    <columns>Queue_Sub_type__c</columns>
    <columns>Channel__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Email French/Courriel Français​</label>
    <queue>Email_French</queue>
    <sharedTo>
        <role>ECR</role>
        <role>ECR_Manager</role>
        <role>Lead</role>
        <role>Tier_1</role>
        <role>Tier_2</role>
    </sharedTo>
</ListView>