force-app/main/default/objects/Case/listViews/In_Store_Director_Escalation_Case.listView-meta.xml
<ListView>
    <fullName>In_Store_Director_Escalation_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Store_ID__c</columns>
    <columns>KIT_Status__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>In Store Director Escalation</label>
    <queue>In_Store_Director_Escalation</queue>
    <sharedTo>
        <role>ECR</role>
        <role>ECR_Manager</role>
    </sharedTo>
</ListView>